Most of the API docs, only missing edit and update client
